--- a/.github/actions/unity-build/action.yml
+++ b/.github/actions/unity-build/action.yml
@@ -26,13 +26,25 @@ runs:
     - name: Unity - Build
       shell: bash
       run: |
-        ./tools/commons/run-client-container.sh $RUNNER_OS
-        docker-compose exec -T client bundle exec fastlane \
-            ${{inputs.platform}} \
-            unity_build \
-            environment:${{inputs.environment}} \
-            upload_to_appcenter:${{inputs.is_upload}} \
-            enable_notify:${{inputs.enable_notify}}
+        # 汎用向けコンテナのセットアップ
+        git submodule update --init tools/commons
+        cd tools/commons/
+        git fetch
+        git switch -C main origin/main
+        chmod 775 ./run-client-container.sh
+
+        # アプリケーション固有を含めたコンテナセットアップ
+        cd ../
+        chmod 775 ./up-tools-container.sh
+        ./up-tools-container.sh $RUNNER_OS
+        chmod 775 ./exec-tools-container.sh
+        ./exec-tools-container.sh bash -c "cd commons/fastlane && \
+                                           bundle exec fastlane \
+                                              ${{inputs.platform}} \
+                                              unity_build \
+                                              environment:${{inputs.environment}} \
+                                              upload_to_appcenter:${{inputs.is_upload}} \
+                                              enable_notify:${{inputs.enable_notify}}"
     - name: Github Actions - Show GITHUB_ENV
       id: build
       shell: bash
