--- a/.github/workflows/unity-build-all.yml
+++ b/.github/workflows/unity-build-all.yml
@@ -64,6 +64,8 @@ jobs:
     steps:
       - name: Git - checkout
         uses: actions/checkout@v3
+        with:
+          submodule: recursive
       - name: Slack - Notify Build Result
         shell: bash
         run: |
